[tool.poetry]
name = "update-ff5-return-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "update_ff5_return_data"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
